--- a/mobility_core/MobilityCore/MobilityCore.Application/MobilityCore.Application.csproj
+++ b/mobility_core/MobilityCore/MobilityCore.Application/MobilityCore.Application.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\MobilityCore.Shared\MobilityCore.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    </ItemGroup>
+
 </Project>
