--- a/resource_manager/server/package.json
+++ b/resource_manager/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "simple-git": "3.30.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
